# SecTask

./: README.md
SecTask/SecTaskClient/SecTaskClient/: CMakeLists.txt  employee.pb.h  main.cpp  main.h
SecTask/SecTaskClient/build-SecTaskClient-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
SecTask/SecTaskClient/build-SecTaskClient-Desktop-Debug/.cmake/api/v1/reply/: target-SecTaskClient-Debug-86185bddb91cd3190a4c.json
SecTask/SecTaskClient/build-SecTaskClient-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-2f72668bb29d2f32aea0.json  cmakeFiles-v1-fd2a8fed32e36b6fafb9.json  codemodel-v2-e3588dc7932f94e96ba4.json  index-2024-01-12T18-16-23-0046.json  target-SecTaskClient_autogen-Debug-33d58904b016a0d7d617.json
SecTask/SecTaskClient/build-SecTaskClient-Desktop-Debug/SecTaskClient_autogen/: moc_predefs.h
SecTask/SecTaskServer/SecTaskServer/: CMakeLists.txt  employee.cpp  employee.grpc.pb.cc  employee.grpc.pb.h  employee.h  employee.pb.cc  main.cpp  main.h  server.cpp  server.h
SecTask/SecTaskServer/build-SecTaskServer-Desktop-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake
SecTask/SecTaskServer/build-SecTaskServer-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-134e07f8e065b9143331.json  codemodel-v2-5ab5d9db2d6386c92a4b.json  index-2024-01-10T19-44-05-0803.json  target-SecTaskServer-Debug-a4ced7e3a6d63f86109d.json  target-SecTaskServer_autogen-Debug-24b12d11cc72878de004.json
SecTask/SecTaskServer/build-SecTaskServer-Desktop-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-9508fbeb1e6e54c7314f.json  codemodel-v2-244d06a8fd766ba55132.json  index-2024-01-10T19-36-44-0928.json  target-SecTaskServer-Debug-b0bd0bab93e50641786d.json
SecTask/SecTaskServer/build-SecTaskServer-Desktop-Debug/SecTaskServer_autogen/: moc_predefs.h
SecTask/SecTaskServer/build-ServerSecTask-Desktop-Debug/: CMakeCache.txt  qtcsettings.cmake
SecTask/Test/: SecondTest.py  Test.js  Test.py  Test.sh  employee_pb2.py  employee_pb2_grpc.py  grpc_user.py
SecTask/gRPC/: employee.grpc.pb.cc  employee.grpc.pb.h  employee.pb.cc  employee.pb.h
SecTask/proto/: employee.proto
